# bixi_scraper

./: .env  .gitignore  Cargo.toml  README.md
migrations/2023-08-13-231154_create_station_status/: down.sql  up.sql
migrations/2023-08-15-181332_create_station/: down.sql  up.sql
queries/: my_station.sql
src/: main.rs  models.rs  schema.rs
