[package]
name = "bixi_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.31", features = ["macros"] }
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1", features = ["postgres", "chrono"] }
dotenvy = { version = "0.15.7"}
serde-aux = { version = "4.2" }
chrono = { version = "0.4" }
